--- a/TuniLink/pom.xml
+++ b/TuniLink/pom.xml
@@ -51,6 +51,10 @@
 			<version>0.11.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
 			<version>0.11.2</version>
