--- a/TuniLink/src/main/resources/application.properties
+++ b/TuniLink/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+file.upload-dir=C:\Users\PC\Desktop\Stage4\TuniLink
